fix mobile overflow-x

--- a/nicepage.css
+++ b/nicepage.css
@@ -2984,7 +2984,7 @@ a {
   --step-icon-border-width: 0px;
   --step-icon-border-radius: 0px;
   --step-icon-size: 0px;
-  
+
 }
 .u-form-progress-responsive {
   --step-icon-size: 0px;
@@ -18152,6 +18152,9 @@ p {
   .u-align-left-xs {
     text-align: left;
   }
+  body {
+    overflow-x: clip;
+  }
 }
 .u-align-center {
   text-align: center;
@@ -20056,9 +20059,9 @@ a.pswp__share--download:hover {
   --animation-custom_in-scale: 1;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-opacity: 0;
-  
-  
-  
+
+
+
 }
 @keyframes bounce {
   from,
@@ -21571,11 +21574,11 @@ a.pswp__share--download:hover {
 }
 /*end-commonstyles animation*/
 .animated.u-absolute-hcenter {
-  
+
   --animation-custom_in-translate_x: -50% !important;
 }
 .animated.u-absolute-vcenter {
-  
+
   --animation-custom_in-translate_y: -50% !important;
 }
 .u-cookies-consent {
@@ -41796,8 +41799,8 @@ a.u-link.u-text-hover-grey-90:hover {
             color: #041424 !important;
         }
 
-        
-        
+
+
         .u-custom-color-2,
         .u-body.u-custom-color-2,
         section.u-custom-color-2:before,
@@ -41866,8 +41869,8 @@ a.u-link.u-text-hover-grey-90:hover {
             color: #040303 !important;
         }
 
-        
-        
+
+
         .u-custom-color-3,
         .u-body.u-custom-color-3,
         section.u-custom-color-3:before,
@@ -41936,8 +41939,8 @@ a.u-link.u-text-hover-grey-90:hover {
             color: rgba(17,1,1,0.82) !important;
         }
 
-        
-        
+
+
         .u-custom-color-4,
         .u-body.u-custom-color-4,
         section.u-custom-color-4:before,
@@ -42006,9 +42009,9 @@ a.u-link.u-text-hover-grey-90:hover {
             color: rgba(117,45,31,0.52) !important;
         }
 
-        
 
-        
+
+
         .u-border-custom-color-1,
         .u-border-custom-color-1.u-input,
         .u-border-custom-color-1.u-field-input.u-field-input,
@@ -42058,8 +42061,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             border-color: #041220 !important;
         }
-        
-        
+
+
         .u-border-custom-color-2,
         .u-border-custom-color-2.u-input,
         .u-border-custom-color-2.u-field-input.u-field-input,
@@ -42109,8 +42112,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             border-color: #040303 !important;
         }
-        
-        
+
+
         .u-border-custom-color-3,
         .u-border-custom-color-3.u-input,
         .u-border-custom-color-3.u-field-input.u-field-input,
@@ -42160,8 +42163,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             border-color: rgba(15,1,1,0.82) !important;
         }
-        
-        
+
+
         .u-border-custom-color-4,
         .u-border-custom-color-4.u-input,
         .u-border-custom-color-4.u-field-input.u-field-input,
@@ -42211,9 +42214,9 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             border-color: rgba(105,41,28,0.52) !important;
         }
-        
 
-        
+
+
         .u-text-custom-color-1,
         .u-input.u-text-custom-color-1,
         .u-input.u-text-custom-color-1[class*="u-border-"],
@@ -42282,8 +42285,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             color: #041424 !important;
         }
-        
-        
+
+
         .u-text-custom-color-2,
         .u-input.u-text-custom-color-2,
         .u-input.u-text-custom-color-2[class*="u-border-"],
@@ -42352,8 +42355,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             color: #040303 !important;
         }
-        
-        
+
+
         .u-text-custom-color-3,
         .u-input.u-text-custom-color-3,
         .u-input.u-text-custom-color-3[class*="u-border-"],
@@ -42422,8 +42425,8 @@ a.u-link.u-text-hover-grey-90:hover {
         {
             color: rgba(17,1,1,0.82) !important;
         }
-        
-        
+
+
         .u-text-custom-color-4,
         .u-input.u-text-custom-color-4,
         .u-input.u-text-custom-color-4[class*="u-border-"],
@@ -42495,137 +42498,137 @@ a.u-link.u-text-hover-grey-90:hover {
 
         .u-body
         {
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         --theme-sheet-width-xl: 1140px;
         --theme-sheet-width-lg: 940px;
         --theme-sheet-width-md: 720px;
         --theme-sheet-width-sm: 540px;
         --theme-sheet-width-xs: 340px;
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         }
 
         /** common-rules **/
@@ -42886,7 +42889,7 @@ a.u-link.u-text-hover-grey-90:hover {
         /*end-media rules*/
         /** publish-rules **/
 
-        
+
 
         /** cms-rules **/
         /*begin-responsive rules*/
@@ -43098,7 +43101,7 @@ a.u-link.u-text-hover-grey-90:hover {
         color: #ffffff;
         }
         /** alt-color-rules **/
-    
+
 
 
 /*end-variables sitestylecss*/
@@ -43125,6 +43128,7 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-header .u-nav-1 {
   font-weight: 700;
   font-size: 1rem;
+  letter-spacing: normal;
 }
 
 .u-header .u-nav-2 {
@@ -43148,10 +43152,6 @@ a.u-link.u-text-hover-grey-90:hover {
     width: auto;
     margin-top: -36px;
     margin-bottom: 60px;
-  }
-
-  .u-header .u-nav-1 {
-    letter-spacing: normal;
   }
 }
 @media (max-width: 991px) {
@@ -43245,6 +43245,6 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 }
 
- /*begin-variables base-font-size*/ 
+ /*begin-variables base-font-size*/
  html { font-size: 16px; }
  /*end-variables base-font-size*/
